PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report__c/Expense_Report__c.object-meta.xml
<CustomObject>
    <description>지출결의서</description>
    <label>지출결의서</label>
    <nameField>
        <displayFormat>ER-{YYYYMM}-{000000}</displayFormat>
        <label>지출결의서 코드</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>