PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report__c/fields/ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>ApprovalStatus__c</fullName>
    <label>승인상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Writing</fullName>
                <default>true</default>
                <label>작성</label>
            </value>
            <value>
                <fullName>Consider</fullName>
                <label>승인검토중</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <label>승인완료</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <label>승인거부</label>
            </value>
            <value>
                <fullName>Recall</fullName>
                <label>회수됨</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>