PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report__c/fields/Approver2__c.field-meta.xml
<CustomField>
    <fullName>Approver2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ExpenseReportApprover2</relationshipName>
    <type>Lookup</type>
</CustomField>