PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report__c/fields/ExpenseReportCriteria__c.field-meta.xml
<CustomField>
    <fullName>ExpenseReportCriteria__c</fullName>
    <label>지출신청 기준</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>