PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report__c/fields/NumberOfRecords__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRecords__c</fullName>
    <description>지출결의서 상세 항목 개수</description>
    <label>항목 개수</label>
    <summaryForeignKey>Expense_Report_Detail__c.Expense_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>