PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report__c/fields/Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Date__c</fullName>
    <label>지급일자</label>
    <type>Date</type>
</CustomField>