PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report__c/fields/Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>상신일자</label>
    <required>true</required>
    <type>Date</type>
</CustomField>