PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <label>상신금액합계</label>
    <summarizedField>Expense_Report_Detail__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense_Report_Detail__c.Expense_Report__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>