PA_Education/TestMenifest/force-app/main/default/objects/Expense_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Submit_Date__c</columns>
    <columns>ApprovalStatus__c</columns>
    <columns>fm_YearMonth__c</columns>
    <columns>TotalAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>